Fix ios layout issue

--- a/css/common.css
+++ b/css/common.css
@@ -89,7 +89,7 @@ header h1 a:hover {animation:hello .5s;}
 header h1 img {height:48px;}
 
 @media (max-width:1024px) {
-    header {position:fixed; top:0; left:0; z-index:1; width:100%; height:87px;}
+    header {position:fixed; top:0; left:0; z-index:1; width:100%;}
 	header h1 {top:50px; left:24px;}
 	header h1 img {height:37px;}
 	header .open {position:absolute; z-index:2; top:56px; right:24px; width:24px; height:24px; text-indent:-9999px;}
